[package]
name = "devela_base"
description = "base shared functionality for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/base"
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code & documentation:
	"/build/**/*.rs", "/build/**/*.md",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
build = "build/mod.rs"
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[features]

#* Development features *#
__publish = []

#* Safety features *#
safe = ["devela_base_macros/safe"]
unsafe = ["devela_base_macros/unsafe"]

#* Capability features *#
_docs = []

[dependencies] # 2 required
devela_base_macros = { workspace = true }

[dependencies.paste_crate] # https://crates.io/crates/paste
version = "1.0.15" # ✗ https://github.com/dtolnay/paste/commits/master/
package = "paste" # safe, ARCHIVED
# alternative: https://crates.io/crates/pastey

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
