[package]
name = "devela_base"
description = "base shared functionality for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/base"
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code & documentation:
	"/build/**/*.rs", "/build/**/*.md",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
build = "build/mod.rs"
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[features]

#* Development features *#
__publish = []

#* Safety features *#
base_safe = []
safe = [
	"devela_base_macros/safe",
	"safe_code", "safe_data", "safe_game", "safe_lang", "safe_media", "safe_num",
	"safe_phys", "safe_sys", "safe_text", "safe_ui", "safe_work",
]
	safe_code = []
	safe_data = []
	safe_game = []
	safe_lang = []
	safe_media = []
	safe_num = []
	safe_phys = []
	safe_sys = ["safe_io", "safe_mem"]
		safe_io = []
		safe_mem = []
	safe_text = []
	safe_ui = []
	safe_work = []

unsafe = [
	"devela_base_macros/unsafe",
	"unsafe_array", "unsafe_ffi", "unsafe_hint", "unsafe_layout",
	"unsafe_niche", "unsafe_ptr", "unsafe_slice", "unsafe_str",
	"unsafe_sync", "unsafe_syscall", "unsafe_thread",
]
	unsafe_array   = []
	unsafe_ffi     = []
	unsafe_hint    = []
	unsafe_layout  = []
	unsafe_niche   = []
	unsafe_ptr     = []
	unsafe_slice   = []
	unsafe_str     = []
	unsafe_sync    = []
	unsafe_syscall = []
	unsafe_thread  = []

#* Capability features *#
_docs = []

[dependencies] # 2 required
devela_base_macros = { workspace = true }

[dependencies.paste_crate] # https://crates.io/crates/paste
version = "1.0.15" # ✗ https://github.com/dtolnay/paste/commits/master/
package = "paste" # safe, ARCHIVED
# alternative: https://crates.io/crates/pastey

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
