[package]
name = "devela_base_alloc"
description = "base alloc shared functionality for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/base_alloc"
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code & documentation:
	"/build/**/*.rs", "/build/**/*.md",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[features]
#* Development features *#
__publish = []

#* Environment features *#
alloc = [] # always enabled

#* Safety features *#
safe = ["devela_base/safe"]
unsafe = ["devela_base/unsafe"]

#* Capability features *#
default = ["alloc"]
_docs = ["unsafe"]

[dependencies] # 1 required
devela_base = { workspace = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
