[package]
name = "devela_base_alloc"
description = "base alloc shared functionality for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/base_alloc"
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code & documentation:
	"/build/**/*.rs", "/build/**/*.md",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
build = "build/mod.rs"
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[features]

#* Development features *#
__dbg = ["devela_base/__dbg"]
__publish = []

#* Environment features *#
alloc = [] # always enabled

#* Safety features *#
base_safe = ["devela_base/base_safe"]
safe = [
	"devela_base/safe", "safe_build",
	"safe_code", "safe_data", "safe_game", "safe_lang", "safe_media", "safe_num",
	"safe_phys", "safe_sys", "safe_text", "safe_ui", "safe_work",
]
	safe_build = []
	safe_code = ["devela_base/safe_code"]
	safe_data = ["devela_base/safe_data"]
	safe_game = ["devela_base/safe_game"]
	safe_lang = ["devela_base/safe_lang"]
	safe_media = ["devela_base/safe_media"]
	safe_num = ["devela_base/safe_num"]
	safe_phys = ["devela_base/safe_phys"]
	safe_sys = ["devela_base/safe_sys", "safe_mem"]
		safe_mem = ["devela_base/safe_mem"]
	safe_text = ["devela_base/safe_text"]
	safe_ui = ["devela_base/safe_ui"]
	safe_work = ["devela_base/safe_work"]

unsafe = [
	"devela_base/unsafe",
	"unsafe_array", "unsafe_ffi", "unsafe_hint", "unsafe_layout",
	"unsafe_niche", "unsafe_ptr", "unsafe_slice", "unsafe_str",
	"unsafe_sync", "unsafe_syscall", "unsafe_thread",
]
	unsafe_array   = []
	unsafe_ffi     = []
	unsafe_hint    = []
	unsafe_layout  = []
	unsafe_niche   = []
	unsafe_ptr     = []
	unsafe_slice   = []
	unsafe_str     = []
	unsafe_sync    = []
	unsafe_syscall = []
	unsafe_thread  = []

#* Capability features *#
default = ["alloc"]
_docs = ["unsafe"]

[dependencies] # 1 required
devela_base = { workspace = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
