[package]
name = "devela_base_alloc"
description = "base alloc shared functionality for devela"
repository = "https://github.com/andamira/devela/tree/main/libs/base_alloc"
# version = "0.25.0-wip" #
version.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code & documentation:
	"/src/**/*.rs", "/src/**/*.md",
	"/build/**/*",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
build = "build/mod.rs"
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "__publish"], no-default-features = true }

[features]

#* Development features *#
__dbg = ["devela_base_core/__dbg"]
__publish = []

#* Environment features *#
alloc = [] # always enabled

#* Safety features *#
base_safe = ["devela_base_core/base_safe"]
safe = [
	"devela_base_core/safe", "safe_build",
	"safe_code", "safe_data", "safe_game", "safe_lang", "safe_media", "safe_num",
	"safe_phys", "safe_sys", "safe_text", "safe_ui", "safe_work",
]
	safe_build = []
	safe_code = ["devela_base_core/safe_code"]
	safe_data = ["devela_base_core/safe_data"]
	safe_game = ["devela_base_core/safe_game"]
	safe_lang = ["devela_base_core/safe_lang"]
	safe_media = ["devela_base_core/safe_media"]
	safe_num = ["devela_base_core/safe_num"]
	safe_phys = ["devela_base_core/safe_phys"]
	safe_sys = ["devela_base_core/safe_sys", "safe_mem"]
		safe_mem = ["devela_base_core/safe_mem"]
	safe_text = ["devela_base_core/safe_text"]
	safe_ui = ["devela_base_core/safe_ui"]
	safe_work = ["devela_base_core/safe_work"]

unsafe = [
	"devela_base_core/unsafe",
	"unsafe_array", "unsafe_ffi", "unsafe_hint", "unsafe_layout",
	"unsafe_niche", "unsafe_ptr", "unsafe_slice", "unsafe_str",
	"unsafe_sync", "unsafe_syscall", "unsafe_thread",
]
	unsafe_array   = []
	unsafe_ffi     = []
	unsafe_hint    = []
	unsafe_layout  = []
	unsafe_niche   = []
	unsafe_ptr     = []
	unsafe_slice   = []
	unsafe_str     = []
	unsafe_sync    = []
	unsafe_syscall = []
	unsafe_thread  = []

#* Capability features *#
default = ["alloc"]
_docs = ["unsafe"]

[dependencies] # 1 required
devela_base_core = { workspace = true }
devela_base_num = { workspace = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
