# devela_base_macros manifest
# ==============================================================================
#
## Table of Contents
#
# * [package]
#   - [metadata.docs.rs]
# * [lib]
#
# * [features]
#   - Safety            (safe,unsafe)
#   - Capability
#   - Dependency
#
# * [badges]
# * [lints]
#
# * [[example]]

[package]
name = "devela_base_macros"
description = "procedural macros for devela_base"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/macros"
include = [
	"/Cargo.toml",
	"/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
	# examples used in docs:
	"/examples/*.rs",
]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["dev", "helper", "helpers", "extension", "code-generation"]
publish = true
[package.metadata.docs.rs]
no-default-features = true
features = ["_docsrs"]

[lib]
path = "./src/lib.rs"
proc-macro = true


[features] # 4/300 (296 remaining), 3 visible, 1 hidden
# ==============================================================================

#* Safety features *#
# ------------------------------------------------------------------------------
unsafe = [] # enables unsafe features in this crate (unused)
safe = [] # forbids `unsafe` in this crate


#* Capability features *#
# ------------------------------------------------------------------------------
default = ["safe"]

#* docs capabilities *#
_docsrs = ["unsafe"] # complete documentation


[badges]
# ==============================================================================
maintenance.status = "experimental"


[lints]
# ==============================================================================
workspace = true
# WAIT: [override lints](https://github.com/rust-lang/cargo/issues/13157)
# [lints.rust]
# missing_docs = "allow" # missing docs for public items, reason: documented examples


# examples
# ==============================================================================
[[example]]
name = "cif"
[[example]]
name = "coalesce"
[[example]]
name = "compile_attr"
[[example]]
name = "compile_doc"
[[example]]
name = "compile"
