[package]
name = "devela_base_macros"
description = "procedural macros for `devela_base_core`"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/macros"
include = [
	"/Cargo.toml",
	"/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
	"/examples/*.rs", # used in docs
]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["dev", "helper", "helpers", "extension", "code-generation"]
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[lib]
proc-macro = true

[features]

#* Development features *#
__publish = []

#* Safety features *#
unsafe = []
safe = []

#* Capability features *#
_docs = ["unsafe"]

[badges]
maintenance.status = "experimental"

[lints]
workspace = true

[[example]]
name = "cif"
[[example]]
name = "coalesce"
[[example]]
name = "compile_attr"
[[example]]
name = "compile_doc"
[[example]]
name = "compile"
