[package]
name = "devela_base_num"
description = "extra numeric functionality for devela_base_core"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/base_num"
include = [
	"/Cargo.toml", "/config/*",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[features]

#* Development features *#

__dbg = []
__publish = []

#* Safety features *#

safe = []
unsafe = ["unsafe_hint"]
	unsafe_hint = []

#* Capability features *#

_docs_nodep = ["unsafe"]
_docs = ["_docs_nodep"]

[dependencies]
devela_base_core  = { workspace = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
