[package]
name = "devela_base_std"
description = "base std shared functionality for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/base_std"
include = [
	# configuration:
	"/Cargo.toml", "/config/*",
	# source code & documentation:
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docsrs"], no-default-features = true }

[features]
#* Development features *#
__publish = []

#* Environment features *#
std = [] # always enabled

#* Safety features *#
unsafe = []
safe = []

#* Capability features *#
default = ["std"]
_docsrs = ["unsafe"]

[dependencies] # 2 required
devela_base = { workspace = true }
devela_base_alloc = { workspace = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
