[package]
name = "devela_macros"
description = "procedural macros for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/macros"
include = [
	"/Cargo.toml",
	"/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
	"/examples/*.rs", # used in docs
]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["dev", "helper", "helpers", "extension", "code-generation"]
publish = true
metadata.docs.rs = { features = ["_docs", "_publish"], no-default-features = true }

[lib]
proc-macro = true

[features]

#* Development features *#
__publish = []

#* Safety features *#
safe = []
unsafe = []

#* Capability features *#
_docs_nodep = ["unsafe"]
_docs = ["_docs_nodep"]

[dependencies]
devela_base_std   = { workspace = true }

devela_base.workspace = true
proc-macro2 = "1.0.101" # WAIT: [proc_macro_quote](https://github.com/rust-lang/rust/issues/54722)
quote = "1.0.40"

[badges]
maintenance.status = "experimental"

[lints]
workspace = true

[[example]]
name = "enumint"
