[package]
name = "devela_num"
description = "extra numeric functionality for devela"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/andamira/devela/tree/main/libs/code"
include = [
	"/Cargo.toml", "/config/*",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docsrs"], no-default-features = true }

[features]
alloc = ["devela_base_alloc"]
std = ["alloc", "devela_base_std"]
unsafe = []
safe = []
_docsrs = ["unsafe"]

macros = ["dep:devela_macros"]

[dependencies]
devela_base       = { workspace = true }
devela_base_alloc = { workspace = true, optional = true }
devela_base_std   = { workspace = true, optional = true }
devela_macros     = { workspace = true, optional = true }
devela_code     = { workspace = true, optional = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
