[package]
name = "devela_num"
description = "extra numeric functionality for devela"
repository = "https://github.com/andamira/devela/tree/main/libs/num"
# version.workspace = "0.25.0-wip" #
version.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
include = [
	"/Cargo.toml", "/config/*",
	"/src/**/*.rs", "/src/**/*.md",
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "__publish"], no-default-features = true }

[features]

#* Development features *#
__publish = []

#* Environment features *#
alloc = ["devela_base_alloc"]
std = ["alloc", "devela_base_std"]

#* Safety features *#
unsafe = []
safe = []

#* Capability features *#
_docs_nodep = ["unsafe"]
_docs = ["_docs_nodep"]

#* Workspace features *#
macros = ["dep:devela_macros"]

[dependencies]
devela_base_core  = { workspace = true }
devela_base_alloc = { workspace = true, optional = true }
devela_base_std   = { workspace = true, optional = true }
devela_macros     = { workspace = true, optional = true }
devela_code       = { workspace = true, optional = true }

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
