# devela_base_macros manifest
# ==============================================================================
[package]
name = "devela_base_macros"
description = "procedural macros for `devela_base_core`"
repository = "https://github.com/andamira/devela/tree/main/crates/base/macros"
documentation = "https://docs.rs/devela_base_macros"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
include = [
	"/Cargo.toml",
	"/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
	"/build/**/*",
	"/examples/*.rs", # used in docs
]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["dev", "helper", "helpers", "extension", "code-generation"]
build = "build/mod.rs"
publish = true
metadata.docs.rs = { features = ["_docs", "__publish"], no-default-features = true }

[lib]
path = "src/index.rs"
proc-macro = true
bench = false

[features]

#* Development features *#
__dbg = [] # shows extra debugging information
__publish = []
__docs_internal = [] # enables documentation for internal items

#* Safety features *#
unsafe = []
safe = []

#* Capability features *#
_docs = ["unsafe"]

[badges]
maintenance.status = "experimental"

[lints]
workspace = true

[[example]]
name = "cif"
[[example]]
name = "coalesce"
[[example]]
name = "compile_attr"
[[example]]
name = "compile_doc"
[[example]]
name = "compile"
