[package]
name = "js_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "main.rs"

[dependencies.devela]
# git = "https://github.com/andamira/devela"
path = "../../.."
features = [
	"js", "time", "unsafe_ffi",
	"alloc", "unsafe_layout", # TEMP
]

[profile.release]
# https://rustwasm.github.io/docs/book/reference/code-size.html
opt-level = "s"      # Optimize for size
lto = true           # Enable link-time optimizations
codegen-units = 1    # Improve optimization at the cost of compile time
panic = "abort"      # Reduce binary size (no unwinding)
strip = true         # Remove debug symbols for smaller binaries
[profile.dev]
panic = "abort"
